--- a/project1css/project1.css
+++ b/project1css/project1.css
@@ -1,59 +1,235 @@
-@import url(https://fonts.googleapis.com/css2?family=Alex+Brush&family=Charm:wght@400;700&display=swaphttps://fonts.googleapis.com/css2?family=Charm:wght@400;700&display=swap);
-body{
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+@import url(https://use.typekit.net/lkm5lyj.css);
+
+@media screen and (min-width: 1500px) {
+body {
+    font-family: "nasalization", sans-serif;
     font-size: 16px;
-    color: rgb(171, 171, 222);
-    background: linear-gradient(to bottom, rgb(1, 1, 67), black);
+    color: rgb(115, 221, 58);
+    background: linear-gradient(to bottom, hsla(240, 97%, 23%, 100%), black);
+    background-repeat: no-repeat;
+    background-attachment: fixed; 
 }
 
 header {
-    font-family: "Charm", cursive;
-    font-size: 2rem;
+    font-size: 3rem;
     text-align: center;
 }
 
-h3 {
-    font-family: "Charm", cursive;
-    font-size: 3rem;
+h4 {
+    margin-top: 2rem;
 }
 
-.concertscontainer{
-    display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    gap: 1rem;
-    min-height: 100vh;
+h3 {
+    font-size: 1.5rem;
+    margin-top: -1rem;
+}
+
+.concertscontainer {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; 
+    position: relative;
+    height: 100vh;  
 }
 
 .concert {
     display: flex;
-    flex-direction: column;
-    height: 35rem;
-    width: auto;
-    border: 2px solid white;
-    flex: 2;
+    background-color: hsla(0, 0%, 100%, 0.3);
+    height: 18rem;
+    width: 18rem;
+    border-radius: 50%;
     padding: 2rem;
-    justify-content: space-between;
-    line-height: justify;
     text-align: center;
+    align-items: center;
+    flex-direction: column;
+    position: absolute;
+    margin: 2rem;
 }
 
-.concert strong {
-    font-family: "Charm", cursive;
-    font-size: 2rem;
+#concert1 { top: 2rem; left: 18rem; }
+#concert2 { top: 12rem; left: 56rem; }
+
+#concert3 { top: 30rem; left: 18rem; }
+#concert4 { top: 40rem; left: 56rem; }
+
+#concert5 { top: 58rem; left: 18rem; }
+#concert6 { top: 68rem; left: 56rem; }
+
+#concert7 { top: 86rem; left: 18rem; }
+#concert8 { top: 96rem; left: 56rem; }
+
+#concert9 { top: 114rem; left: 18rem; }
+#concert10 { top: 124rem; left: 56rem; }
+
+
+.concert p, .concert h5, .concert strong {
+    font-family: "roc-grotesk";
+    color: hsl(0, 86%, 31%);
 }
 
-.concert p, .concert h4 {
+.concert strong{
+    color: hsl(240, 97%, 23%);
+}
+
+.concert p, .concert h5, .concert strong {
     visibility: hidden;
 }
 
-.concert:hover p, .concert:hover h4 {
+.concert:hover {
+    height: 80rem;
+    width: 80rem;
+    z-index: 10;
+    background-color: white;
+}
+
+.concert:hover h5 {
+    visibility: visible;
+    font-family: "roc-grotesk-wide", sans-serif;
+    font-size: 2rem;
+    max-width: 90%
+
+}
+
+.concert:hover p, .concert:hover strong, .concert:hover h4, .concert:hover h3 {
     visibility: visible;
     font-size: 1.5rem;
+    margin-top: 1rem;
+    max-width: 80%;
 }
 
-.concert:hover{
-    height: auto;
+.concert:hover p {
+    max-width: 70%;
+}
+
+.concert:hover h4 {
+    margin-top: 8rem;
 }
 
 
+#concert1:hover { top: 55%; left: 50%; transform: translate(-50%, -50%); }
+#concert2:hover { top: 55%; left: 50%; transform: translate(-50%, -50%); }
+#concert3:hover { top: 55%; left: 50%; transform: translate(-50%, -50%); }
+#concert4:hover { top: 55%; left: 50%; transform: translate(-50%, -50%); }
+#concert5:hover { top: 55%; left: 50%; transform: translate(-50%, -50%); }
+#concert6:hover { top: 55%; left: 50%; transform: translate(-50%, -50%); }
+#concert7:hover { top: 55%; left: 50%; transform: translate(-50%, -50%); }
+#concert8:hover { top: 55%; left: 50%; transform: translate(-50%, -50%); }
+#concert9:hover { top: 55%; left: 50%; transform: translate(-50%, -50%); }
+#concert10:hover { top: 55%; left: 50%; transform: translate(-50%, -50%); }
 
+}
+
+@media screen and (max-width: 400px) {
+    body {
+        font-family: "nasalization", sans-serif;
+        font-size: 16px;
+        color: rgb(115, 221, 58);
+        background: linear-gradient(to bottom, hsla(240, 97%, 23%, 100%), black);
+        background-repeat: no-repeat;
+        background-attachment: fixed; 
+    }
+    
+    header {
+        font-size: 1rem;
+        text-align: center;
+    }
+    
+    h4 {
+        margin-top: 2rem;
+    }
+    
+    h3 {
+        font-size: 1.5rem;
+        margin-top: -1rem;
+    }
+    
+    .concertscontainer {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center; 
+        position: relative;
+        height: 100vh;  
+    }
+    
+    .concert {
+        display: flex;
+        background-color: hsla(0, 0%, 100%, 0.3);
+        height: 18rem;
+        width: 18rem;
+        border-radius: 50%;
+        padding: 2rem;
+        text-align: center;
+        align-items: center;
+        flex-direction: column;
+        position: absolute;
+        margin: 2rem;
+    }
+    
+    #concert1 { top: 1rem; }
+    #concert2 { top: 25rem; }
+    #concert3 { top: 50rem; }
+    #concert4 { top: 75rem; }
+    #concert5 { top: 100rem; }
+    #concert6 { top: 125rem; }
+    #concert7 { top: 150rem; }
+    #concert8 { top: 175rem; }
+    #concert9 { top: 200rem; }
+    #concert10 { top: 225rem; }
+    
+    
+    .concert p, .concert h5, .concert strong {
+        font-family: "roc-grotesk";
+        color: hsl(0, 86%, 31%);
+    }
+    
+    .concert strong{
+        color: hsl(240, 97%, 23%);
+    }
+    
+    .concert p, .concert h5, .concert strong {
+        visibility: hidden;
+    }
+    
+    .concert:hover {
+        height: 80rem;
+        width: 80rem;
+        z-index: 10;
+        background-color: white;
+    }
+    
+    .concert:hover h5 {
+        visibility: visible;
+        font-family: "roc-grotesk-wide", sans-serif;
+        font-size: 2rem;
+        max-width: 90%
+    
+    }
+    
+    .concert:hover p, .concert:hover strong, .concert:hover h4, .concert:hover h3 {
+        visibility: visible;
+        font-size: 1.5rem;
+        margin-top: 1rem;
+        max-width: 80%;
+    }
+    
+    .concert:hover p {
+        max-width: 70%;
+    }
+    
+    .concert:hover h4 {
+        margin-top: 8rem;
+    }
+    
+    
+    #concert1:hover { top: 55%; left: 50%; transform: translate(-50%, -50%); }
+    #concert2:hover { top: 55%; left: 50%; transform: translate(-50%, -50%); }
+    #concert3:hover { top: 55%; left: 50%; transform: translate(-50%, -50%); }
+    #concert4:hover { top: 55%; left: 50%; transform: translate(-50%, -50%); }
+    #concert5:hover { top: 55%; left: 50%; transform: translate(-50%, -50%); }
+    #concert6:hover { top: 55%; left: 50%; transform: translate(-50%, -50%); }
+    #concert7:hover { top: 55%; left: 50%; transform: translate(-50%, -50%); }
+    #concert8:hover { top: 55%; left: 50%; transform: translate(-50%, -50%); }
+    #concert9:hover { top: 55%; left: 50%; transform: translate(-50%, -50%); }
+    #concert10:hover { top: 55%; left: 50%; transform: translate(-50%, -50%); }
+    
+    }
