--- a/wa/wa12/wa12.css
+++ b/wa/wa12/wa12.css
@@ -1,97 +1,160 @@
 html {
-    box-sizing: border-box;
-  }
+  box-sizing: border-box;
+}
+
+*,
+*::before,
+*::after {
+  box-sizing: inherit;
+  margin: 0;
+  padding: 0;
+}
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
+  background-color: #577fed;
+  font-size: 1.5rem;
+  line-height: 2.5;
+  min-height: 150vh;
+}
+
+
+.inbox {
+  margin: 50px auto;
+  width: 600px;
+  background-color: rgb(172, 167, 167);
+  border-radius: 15px;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+  padding-bottom: 80px;
+}
+
+
+#js-image {
+  display: flex;
+  justify-content: center;
+}
+
+.dog-image {
+  width: 450px;
+}
+
+header {
+  font-family: "variex", sans-serif;
+  width: 100%;
+  font-size: 38px;
+  text-align: center;
+  padding: 10px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
+
+.jokes {
+  padding: 20px 50px;
+  min-height: 200px;
+  margin-bottom: 20px;
+}
+
+.joke {
+  font-weight: bold;
+}
+
+.punchline-text {
+  padding-bottom: 20px;
+  font-size: 25px;
+  color: black;
+}
+
+.controls {
+  width: 100%;
+  padding: 20px 50px;
   
-  *,
-  *::before,
-  *::after {
-    box-sizing: inherit;
-    margin: 0;
-    padding: 0;
-  }
-  
-  body {
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen-Sans, Ubuntu, Cantarell, "Helvetica Neue", sans-serif;
-    background-color: #c9bd95;
-  }
-  
+}
+
+.button {
+  display: block;
+  color: white;
+  border-radius: 4px;
+  border: none;
+  padding: 10px 20px;
+  cursor: pointer;
+  text-align: center;
+  width: 100%;
+  font-size: 20px;
+  box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
+  font-family: "captain-comic", sans-serif;
+  font-style: normal;
+}
+
+.button-wrapper {
+  position: relative;
+  width: 100%;
+  margin-bottom: 15px;
+  height: 55px;
+}
+
+.rainbow-glow {
+  position: absolute;
+  top: -4px;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  border-radius: 10px;
+  background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet, pink);
+  filter: blur(15px);
+  z-index: 0;
+  background-size: 400% 400%;
+  animation: rainbow 6s linear infinite;
+}
+
+.punchline {
+  background-color: black;
+  text-decoration: none;
+}
+
+.punchline:hover {
+  background-color: white;
+  color: black;
+}
+
+.new-joke {
+  background-color: #000000;
+  margin-bottom: 28px;
+  position: relative;
+  z-index: 1;
+  overflow: visible;
+  border-radius: 10px;
+}
+
+.new-joke:hover{
+  background: linear-gradient(45deg, red, orange, yellow, green, blue, indigo, violet, pink);
+  background-size: 400% 400%;
+  animation: rainbow 6s linear infinite;
+
+}
+
+.new-joke:disabled {
+  background-color: #cccccc;
+  color: #666666;
+  cursor: not-allowed;
+}
+
+.outsideText {
+  width: 500px;
+  margin: 0px 100px;
+  font-size: 15px;
+}
+
+@keyframes rainbow {
+  0% { background-position: 0 0; }
+  50% { background-position: 100% 0; }
+  100% { background-position: 0 0; }
+}
+
+@media screen and (max-width: 600px) {
   .app {
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 600px;
-    background-color: white;
-    border-radius: 5px;
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
-  }
-  
-  header {
     width: 100%;
-    font-size: 30px;
-    text-align: center;
-    padding: 10px;
-    border-bottom: 1px solid #ebebeb;
   }
-  
-  .quotes {
-    padding: 20px 50px;
-    min-height: 200px;
+  .joke-text {
+    font-size: 18px;
   }
-  
-  .quote-text {
-    padding-bottom: 20px;
-    font-size: 25px;
-    color: black;
-  }
-  
-  .controls {
-    width: 100%;
-    padding: 20px 50px;
-  }
-  
-  .button {
-    display: block;
-    color: white;
-    border-radius: 4px;
-    border: none;
-    padding: 10px 20px;
-    cursor: pointer;
-    text-align: center;
-    width: 100%;
-    font-size: 20px;
-    box-shadow: 0 2px 2px 0 rgba(0,0,0,.14), 0 3px 1px -2px rgba(0,0,0,.2), 0 1px 5px 0 rgba(0,0,0,.12);
-  }
-  
-  .twitter {
-    background-color: #1da1f2;
-    text-decoration: none;
-  }
-  
-  .twitter:hover {
-    background-color: #1e7fbb;
-  }
-  
-  .new-quote {
-    background-color: #4A2B0F;
-    margin-bottom: 15px;
-  }
-  
-  .new-quote:hover {
-    background-color: #6d3b0e;
-  }
-  
-  .new-quote:disabled {
-    background-color: #cccccc;
-    color: #666666;
-    cursor: not-allowed;
-  }
-  
-  @media screen and (max-width: 600px) {
-    .app {
-      width: 100%;
-    }
-    .quote-text {
-      font-size: 18px;
-    }
-  }
+}
